# python-skeleton

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  setup.cfg
tests/: test_python_skeleton.py
